--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -2,7 +2,7 @@
 @import "./main.scss";
 
 .appContainer{
-  background: $white-4;
+  background: $grey-7;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
