--- a/src/components/ProductCard/styles/productCard.module.scss
+++ b/src/components/ProductCard/styles/productCard.module.scss
@@ -15,6 +15,7 @@
         right: 0;
         width: 100%;
         height: 48px;
+        z-index: 10;
         .favoriteBtn{
             position: absolute;
             top: 16px;
