(feat/components): add slider overrides hover

--- a/src/components/ProductCard/styles/imageSliderOverride.css
+++ b/src/components/ProductCard/styles/imageSliderOverride.css
@@ -9,3 +9,10 @@
     top: auto!important;
     z-index: 15;
 }
+
+.slick-next:hover, .slick-prev:hover{
+    border-radius: 50%!important;
+    padding: 2.5px;
+    transition: 0.1s all ease-in-out;
+    background: rgba(0, 0, 0, 0.08)!important;
+}
