--- a/src/components/ProductCard/styles/productCard.module.scss
+++ b/src/components/ProductCard/styles/productCard.module.scss
@@ -29,7 +29,16 @@
     }
     img{
         width: 100%;
-        height: 248px;
+        height: 252px;
+    }
+    .slideIndicatorContainer{
+        height: 4px;
+        background: $white-3;
+        .slideIndicator{
+            height: 100%;
+            background: $grey-4;
+            transition: all 0.5s ease-in-out;
+        }
     }
     .cardInfoWrapper{
         box-sizing: border-box;
